<resources>
    <string name="app_name">MiniLinkedInApp</string>
    <string name="username">Your Name</string>
    <string name="user_email">email@email.com</string>
    <string name="education">Education</string>
    <string name="experience">Experience</string>
    <string name="project">Project</string>

    <string name="image_button_description">Image Button</string>

    <string name="introduction">CPP(2012 ~ 2013)</string>
    <string name="content">- Database\n- Angular 2\n- Android\n- Primeng</string>
    <string name="education_edit_school_name">School Name</string>
    <string name="education_edit_major">Major</string>
    <string name="education_edit_start_date">Start Date</string>
    <string name="education_edit_end_date">End Date</string>
    <string name="education_edit_courses">Courses</string>
    <string name="menu_save">Save</string>
    <string name="experience_edit_company_name">Company Name</string>
    <string name="experience_edit_job_title">Job Title</string>
    <string name="experience_edit_start_date">Start Date</string>
    <string name="experience_edit_end_date">End Date</string>
    <string name="experience_edit_project_summary">Project Summary</string>
    <string name="project_edit_project_name">Project Name</string>
    <string name="project_edit_project_title">Project Title</string>
    <string name="project_edit_start_date">Start Date</string>
    <string name="project_edit_end_start">End Date</string>
    <string name="project_edit_project_summary">Project Summary</string>
    <string name="project_edit_end_date">End Date</string>
    <string name="basicinfo_edit_name">Your Name</string>
    <string name="basicinfo_edit_email">Email</string>
    <string name="delete_btn">Delete</string>
</resources>
