<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin">

    <EditText
        android:id="@+id/project_edit_project_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/project_edit_project_name"/>

    <EditText
        android:id="@+id/project_edit_project_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/project_edit_project_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/project_edit_start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="date"
            android:hint="@string/project_edit_start_date"/>
        <EditText
            android:id="@+id/project_edit_end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/project_edit_end_date"/>
    </LinearLayout>

    <EditText
        android:id="@+id/project_edit_project_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/project_edit_project_summary"/>

    <!-- Delete Button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/education_edit_delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_btn"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</LinearLayout>