<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/education_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/content_size"
            tools:text="@string/introduction" />
        <ImageButton
            android:layout_width="@dimen/action_button_size"
            android:layout_height="@dimen/action_button_size"
            android:src="@drawable/ic_mode_edit_black_18dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/image_button_description" />
    </LinearLayout>
    <TextView
        android:id="@+id/education_courses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_sub_margin"
        android:textSize="@dimen/content_size"
        tools:text="@string/content" />
</LinearLayout>