<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="willy.individual.com.minilinkedinapp.MainActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <!-- User Profile Component -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/profile_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/profile_image">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="23sp"/>
                <ImageButton
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginLeft="8dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_mode_edit_black_18dp"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/image_button_description" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_username"
                android:layout_marginTop="8dp"
                android:layout_toLeftOf="@+id/profile_image"
                android:layout_alignParentLeft="true"
                android:text="@string/user_email"/>
"
            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_account_circle_black_48dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/image_button_description" />
        </RelativeLayout>
        <!-- Profile  End -->


        <!-- Education Component -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/education"
                android:textSize="23sp"
                android:textAllCaps="true"/>

            <ImageButton
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_add_black_18dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/image_button_description" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/introduction"/>
                <ImageButton
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@drawable/ic_mode_edit_black_18dp"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/image_button_description" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content"/>
        </LinearLayout>
        <!-- Education End -->


        <!-- Experience Component -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/experience"
                android:textSize="23sp"
                android:textAllCaps="true"/>

            <ImageButton
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_add_black_18dp"
                android:background="?attr/selectableItemBackground"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/introduction"/>
                <ImageButton
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@drawable/ic_mode_edit_black_18dp"
                    android:background="?attr/selectableItemBackground"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content"/>
        </LinearLayout>
        <!-- Experience End -->


        <!-- Project Component -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/project"
                android:textSize="23sp"
                android:textAllCaps="true"/>

            <ImageButton
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_add_black_18dp"
                android:background="?attr/selectableItemBackground"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/introduction"/>
                <ImageButton
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@drawable/ic_mode_edit_black_18dp"
                    android:background="?attr/selectableItemBackground"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content"/>
        </LinearLayout>
        <!-- Project End -->

    </LinearLayout>
</ScrollView>
